--- a/style.css
+++ b/style.css
@@ -8,9 +8,11 @@ body {
 /* 首圖裝飾 */
 .hero-bg {
     background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
-        url('https://images.unsplash.com/photo-1519741497674-611481863552?auto=format&fit=crop&w=1920&q=80');
-    background-size: cover;
+        url('婚紗照.JPG');
+    background-size: auto 100%;
     background-position: center;
+    background-repeat: no-repeat;
+    background-color: black;
 }
 
 /* 資訊卡片 */
