--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 /* 首圖裝飾 */
 .hero-bg {
     background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
-        url('婚紗照.JPG');
+        url('婚紗照.jpg');
     background-size: auto 100%;
     background-position: center;
     background-repeat: no-repeat;
